finalizing output